# learnopengl

./: .gitignore  CMakeLists.txt  README.md  main.cpp
getting_started/: CMakeLists.txt
getting_started/creating_a_window/: CMakeLists.txt  main.cpp
getting_started/hello_triangle/: CMakeLists.txt  main.cpp  shaders.cpp  shaders.h
getting_started/shaders/: CMakeLists.txt  main.cpp
getting_started/shaders/shaders_shaders/: frag_shader.fs  vert_shader.vs
getting_started/template/: CMakeLists.txt  main.cpp
getting_started/textures/: CMakeLists.txt  main.cpp
getting_started/textures/textures_shaders/: fs.fs  vs.vs
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
template/: CMakeLists.txt
util/: CMakeLists.txt  README.md  util.cpp  util.h
